--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 999;
     padding: 0 9%;
 }
 .logo{
@@ -37,7 +38,7 @@ header nav a:hover{
         left: -100%;
         top: 100%;
         width: 100%;
-        height: 500px;
+        height: 100vh;
         background-color: #fff;
         display: flex;
         flex-direction: column;
